--- a/views/index.html
+++ b/views/index.html
@@ -27,10 +27,10 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimal-ui"/>
     <!-- CSS -->
-    <link rel="stylesheet" href="assets/stylesheets/app.css"/>
+    <link rel="stylesheet" href="dist/assets/stylesheets/app.css"/>
 </head>
 <body style="padding:0;margin:0; background-color:#fff; height: 100%;overflow:hidden;">
 <div id="app"></div>
-<script type="application/javascript" src="./client.js"></script>
+<script type="application/javascript" src="dist/client.js"></script>
 </body>
 </html>
