--- a/views/index.html
+++ b/views/index.html
@@ -29,7 +29,8 @@
     <!-- CSS -->
     <link rel="stylesheet" href="dist/assets/stylesheets/app.css"/>
 </head>
-<body style="padding:0;margin:0; background-color:#fff; height: 100%;overflow:hidden;">
+<body>
+<div id="logo">twitbeat</div>
 <div id="app"></div>
 <script type="application/javascript" src="dist/client.js"></script>
 </body>
