the real cactus hack logo

--- a/app/assets/stylesheets/app.less
+++ b/app/assets/stylesheets/app.less
@@ -13,10 +13,12 @@ body {
 }
 
 #logo {
-  background: url('/dist/images/cactus.svg') no-repeat;
-  height: 32px;
-  margin: 10px;
-  padding-left: 32px;
-  line-height: 32px;
+  background: url('/dist/images/CactusHackLogo.svg') no-repeat top left;
+  height: 100px;
+  padding-left: 130px;
+  line-height: 100px;
   font-weight: bold;
+  position: absolute;
+  top: 20px;
+  left: 20px;
 }
