--- a/app/assets/stylesheets/app.less
+++ b/app/assets/stylesheets/app.less
@@ -6,9 +6,8 @@ html, body {
 }
 
 body {
-  background:
-    radial-gradient(rgba(0,0,0,0), rgba(0,0,0,.65)),
-    rgb(10,35,0) url('/dist/images/grid.svg');
+  background: radial-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, .65)),
+  rgb(10, 35, 0) url('/dist/images/grid.svg');
   color: white;
 }
 
