Make containers work

--- a/app/assets/stylesheets/app.less
+++ b/app/assets/stylesheets/app.less
@@ -21,3 +21,14 @@ body {
   top: 20px;
   left: 20px;
 }
+
+.sparkline-container{
+  height: 80%;
+  position:absolute;
+  top:0px;
+}
+
+.text-container{
+  position:absolute;
+  bottom:0px;
+}
