--- a/app/assets/stylesheets/app.less
+++ b/app/assets/stylesheets/app.less
@@ -9,6 +9,7 @@ body {
   background: radial-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, .65)),
   rgb(10, 35, 0) url('/dist/images/grid.svg');
   color: white;
+  font-variant-ligatures:common-ligatures;
 }
 
 #logo {
@@ -31,4 +32,13 @@ body {
 .text-container{
   position:absolute;
   bottom:0px;
+}
+
+.tweetLink{
+  color:#fff;
+  font-weight:600;
+}
+
+.tweetList{
+  list-style:none;
 }
