Add Fira Sans typeface

--- a/app/assets/stylesheets/app.less
+++ b/app/assets/stylesheets/app.less
@@ -10,6 +10,8 @@ body {
   rgb(10, 35, 0) url('/dist/images/grid.svg');
   color: white;
   font-variant-ligatures:common-ligatures;
+  font-family:"fira-sans","Avenir Next","Helvetica Neue",sans-serif;
+  font-size:16px;
 }
 
 #logo {
@@ -37,8 +39,23 @@ body {
 .tweetLink{
   color:#fff;
   font-weight:600;
+  text-decoration: none;
 }
 
 .tweetList{
   list-style:none;
+}
+
+.tweetUser{
+  font-weight:700;
+  letter-spacing:1px;
+  font-size:24px;
+}
+
+.tweetText{
+  font-style:italic;
+}
+
+.tweetPoints{
+
 }
