--- a/views/index.html
+++ b/views/index.html
@@ -2,6 +2,8 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Twitbeat</title>
+    <script src="//use.typekit.net/rlt8mor.js"></script>
+    <script>try{Typekit.load();}catch(e){}</script>
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="57x57" href="images/apple-touch-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="images/apple-touch-icon-60x60.png">
