--- a/app/assets/stylesheets/app.less
+++ b/app/assets/stylesheets/app.less
@@ -9,36 +9,57 @@ body {
   background: radial-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, .65)),
   rgb(10, 35, 0) url('/dist/images/grid.svg');
   color: white;
-  font-variant-ligatures:common-ligatures;
+  font-variant-ligatures: common-ligatures;
 }
 
 #logo {
   background: url('/dist/images/CactusHackLogo.svg') no-repeat top left;
   height: 100px;
-  padding-left: 130px;
+  padding-left: 100px;
   line-height: 100px;
   font-weight: bold;
   position: absolute;
   top: 20px;
-  left: 20px;
+  left: 50%;
+  margin-left: -50px;
 }
 
-.sparkline-container{
-  height: 80%;
-  position:absolute;
-  top:0px;
+.sparkline-container {
+  height: 100%;
+  width: 80vw;
+  position: absolute;
+  top: 0px;
+  left: 20vw;
 }
 
-.text-container{
-  position:absolute;
-  bottom:0px;
+.text-container {
+  position: absolute;
+  bottom: 0px;
+  height: 100%;
+  width: 20vw;
+  left: 0;
+  top: 0;
+  padding-top: 100px;
+  background-color: rgba(33, 33, 33, .8);
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
-.tweetLink{
-  color:#fff;
-  font-weight:600;
+.tweetLink {
+  color: #fff;
+  font-weight: 600;
 }
 
-.tweetList{
-  list-style:none;
+.tweetList {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  a {
+    text-decoration: none;
+  }
+  li {
+    padding: 6px;
+    border-bottom: 1px solid #ddd;
+    width: 100%;
+  }
 }
