--- a/app/assets/stylesheets/app.less
+++ b/app/assets/stylesheets/app.less
@@ -10,6 +10,7 @@ body {
   rgb(10, 35, 0) url('/dist/images/grid.svg');
   color: white;
   font-variant-ligatures: common-ligatures;
+  font-family:"fira-sans","Avenir Next","Helvetica Neue",sans-serif;
 }
 
 #logo {
