--- a/views/index.html
+++ b/views/index.html
@@ -1,5 +1,7 @@
 <html>
 <head lang="en">
+    <script src="//use.typekit.net/rlt8mor.js"></script>
+    <script>try{Typekit.load();}catch(e){}</script>
     <meta charset="UTF-8">
     <title>Twitbeat</title>
     <!-- Favicons -->
