--- a/app/assets/stylesheets/app.less
+++ b/app/assets/stylesheets/app.less
@@ -10,7 +10,7 @@ body {
   rgb(10, 35, 0) url('/dist/images/grid.svg');
   color: white;
   font-variant-ligatures: common-ligatures;
-  font-family:"fira-sans","Avenir Next","Helvetica Neue",sans-serif;
+  font-family: "fira-sans", "Avenir Next", "Helvetica Neue", sans-serif;
 }
 
 #logo {
@@ -55,8 +55,16 @@ body {
   list-style: none;
   padding: 0;
   margin: 0;
+  h4 {
+    font-size: 22px;
+    font-weight: 300;
+  }
   a {
     text-decoration: none;
+  }
+  .cactus-points {
+    color: #2F9B04;
+
   }
   li {
     padding: 6px;
